--- a/index2.html
+++ b/index2.html
@@ -18,10 +18,9 @@
 				<div class="frame__title-wrap">
 					<h1 class="frame__title">Ambient Canvas Backgrounds</h1>
 				</div>
-				<a class="frame__github" href="https://github.com/codrops/AmbientCanvasBackgrounds/">GitHub</a>
+				<a class="frame__github" href="https://github.com/devcleverton">GitHub</a>
 				<div class="frame__links">
-					<a href="https://tympanus.net/Development/MotionTransitionEffect/">Previous Demo</a>
-					<a href="https://tympanus.net/codrops/?p=36743">Article</a>
+					
 				</div>
 				<div class="frame__demos">
 					<a href="index.html" class="frame__demo">Aurora</a>
